--- a/back-end/IMTVENTAIRE/.adonisrc.json
+++ b/back-end/IMTVENTAIRE/.adonisrc.json
@@ -13,7 +13,7 @@
     "Contracts": "contracts"
   },
   "preloads": ["./start/routes", "./start/kernel"],
-  "providers": ["./providers/AppProvider", "@adonisjs/core"],
+  "providers": ["./providers/AppProvider", "./providers/DatabaseProvider", "@adonisjs/core", "@adonisjs/lucid"],
   "aceProviders": ["@adonisjs/repl"],
   "tests": {
     "suites": [
