chore: update package-lock.json and package.json for eslint version downgrade and add new package-lock for back-end

--- a/back-end/IMTVENTAIRE/package.json
+++ b/back-end/IMTVENTAIRE/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "IMTVENTAIRE",
+  "name": "imtventaire",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -44,7 +44,7 @@
     "@types/proxy-addr": "^2.0.3",
     "@types/source-map-support": "^0.5.10",
     "adonis-preset-ts": "^2.1.0",
-    "eslint": "^9.27.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-adonis": "^2.1.1",
     "eslint-plugin-prettier": "^5.4.0",
