feat: docker works with .env

--- a/back-end/IMTVENTAIRE/.env
+++ b/back-end/IMTVENTAIRE/.env
@@ -3,11 +3,12 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=masqG9S0O5HEiVMjVLsVRZeGcAQ70Ea7
 DRIVE_DISK=local
+APP_NAME=imtventaire
 
 # Base de de données
 DB_CONNECTION=pg
-PG_HOST=localhost
+PG_HOST=postgres
 PG_PORT=5432
 PG_USER=postgres
-PG_PASSWORD=admin
-PG_DB_NAME=postgres
+PG_PASSWORD=postgres
+PG_DB_NAME=imtventaire
