--- a/back-end/IMTVENTAIRE/package.json
+++ b/back-end/IMTVENTAIRE/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.9.0",
+    "@adonisjs/cors": "^1.0.0",
     "@adonisjs/lucid": "^18.4.0",
     "@adonisjs/repl": "^3.1.11",
     "pg": "^8.11.3",
