feat: refactor du projet

--- a/back-end/.env
+++ b/back-end/.env
@@ -10,5 +10,5 @@ DB_CONNECTION=pg
 PG_HOST=postgres
 PG_PORT=5432
 PG_USER=postgres
-PG_PASSWORD=postgres
-PG_DB_NAME=imtventaire
+PG_PASSWORD=admin
+PG_DB_NAME=postgres
