--- a/back-end/docker-compose.yml
+++ b/back-end/docker-compose.yml
@@ -15,15 +15,20 @@ services:
     depends_on:
       - postgres
     command: npm run dev
+    environment:
+      - PG_HOST=postgres
+      - PG_PORT=5433
 
   postgres:
     image: postgres:15-alpine
     ports:
-      - "${PG_PORT:-5432}:5432"
+      - "5433:5433"
     environment:
       - POSTGRES_USER=${PG_USER:-postgres}
       - POSTGRES_PASSWORD=${PG_PASSWORD:-postgres}
       - POSTGRES_DB=${PG_DB_NAME:-imtventaire}
+      - POSTGRES_PORT=5433
+    command: -p 5433
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./database/insert_table.sql:/docker-entrypoint-initdb.d/01-create-tables.sql
