--- a/back-end/package.json
+++ b/back-end/package.json
@@ -59,6 +59,7 @@
     "@adonisjs/cors": "^1.0.0",
     "@adonisjs/lucid": "^18.4.0",
     "@adonisjs/repl": "^3.1.11",
+    "adonis-swagger": "^1.2.9",
     "pg": "^8.11.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.2.2",
