--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "lucide-react": "^0.511.0",
+    "motion": "^12.16.0",
     "next-themes": "^0.4.6",
     "quagga": "^0.12.1",
     "react": "^18.2.0",
