--- a/back-end/docker-compose.yml
+++ b/back-end/docker-compose.yml
@@ -5,8 +5,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: imtventaire-backend
+    hostname: imtventaire-backend
     ports:
-      - "${PORT:-3333}:3333"
+      - "3333:3333"
     volumes:
       - .:/app
       - /app/node_modules
@@ -18,6 +20,8 @@ services:
     environment:
       - PG_HOST=postgres
       - PG_PORT=5433
+      - HOST=0.0.0.0
+      - PORT=3333
 
   postgres:
     image: postgres:15-alpine
