--- a/back-end/docker-compose.yml
+++ b/back-end/docker-compose.yml
@@ -1,21 +1,30 @@
 version: '3.8'
 
 services:
+  frontend:
+    build:
+      context: ../front-end
+      dockerfile: Dockerfile
+    ports:
+      - "5174:80"
+    depends_on:
+      - backend
+
   backend:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - "${PORT:-3333}:3333"
-    volumes:
-      - .:/app
-      - /app/node_modules
+
     env_file:
       - .env
     depends_on:
       - postgres
     command: npm run dev
     environment:
+      - NODE_ENV=production
+      - HOST=0.0.0.0
       - PG_HOST=postgres
       - PG_PORT=5433
 
@@ -37,4 +46,4 @@ services:
       - .env
 
 volumes:
-  postgres_data: 
+  postgres_data:
