--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "jotai": "^2.12.5",
     "lucide-react": "^0.511.0",
     "motion": "^12.16.0",
