feat: fonctionnement avec https, wip ssl

--- a/back-end/.env
+++ b/back-end/.env
@@ -8,7 +8,10 @@ APP_NAME=imtventaire
 # Base de de données
 DB_CONNECTION=pg
 PG_HOST=postgres
-PG_PORT=5432
+PG_PORT=5433
 PG_USER=postgres
 PG_PASSWORD=admin
 PG_DB_NAME=postgres
+
+SSL_KEY=/app/ssl/server.key
+SSL_CERT=/app/ssl/server.crt
