--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -6,14 +6,12 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
-COPY cert.key /app/cert.key
-COPY cert.crt /app/cert.crt
 RUN npm run build
 
 EXPOSE 3333
 
 ENV NODE_ENV=production
-ENV SSL_KEY=/app/cert.key
-ENV SSL_CERT=/app/cert.crt
+ENV SSL_KEY=/app/ssl/server.key
+ENV SSL_CERT=/app/ssl/server.cert
 
 CMD ["npm", "run", "start"] 
