--- a/front-end/nginx.conf
+++ b/front-end/nginx.conf
@@ -1,9 +1,24 @@
+# Redirection HTTP -> HTTPS
 server {
-  listen 80;
+    listen 80;
+    server_name localhost;
+    return 301 https://$host$request_uri;
+}
 
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html;
-    try_files $uri $uri/ /index.html;
-  }
+# Serveur HTTPS
+server {
+    listen 443 ssl;
+    server_name localhost;
+
+    ssl_certificate /etc/nginx/ssl/server.crt;
+    ssl_certificate_key /etc/nginx/ssl/server.key;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
+    }
 }
