feat: volume letsencrypt

--- a/back-end/docker-compose.yml
+++ b/back-end/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - backend
     volumes:
       - ../ssl:/etc/nginx/ssl:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
 
   backend:
     build:
