fix(pwa): icône app

--- a/front-end/nginx.conf
+++ b/front-end/nginx.conf
@@ -1,6 +1,14 @@
 server {
   listen 80;
 
+  # Configuration pour les fichiers statiques (icônes PWA, etc.)
+  location ~* \.(png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|css|js)$ {
+    root   /usr/share/nginx/html;
+    expires 1y;
+    add_header Cache-Control "public, immutable";
+    try_files $uri =404;
+  }
+
   location / {
     root   /usr/share/nginx/html;
     index  index.html;
